Contrast fixes

--- a/docs/plugins/theme-dracula/plugin.css
+++ b/docs/plugins/theme-dracula/plugin.css
@@ -4,9 +4,37 @@
   --text-color: #f8f8f2;
   --action-color: #8AFF80;
   --selected-item-text-color: #22212c;
-  --error-color:#FF9580;
+  --error-color:#e7655b;
   --accent-border-color: #FF80BF;
   --selected-item-color:#FF80BF;
   --selected-on-secondary-item-color: #6ad1c0;
   --text-selection-bg-color: #454158;
+}
+
+.th-dracula .menu__item--active.menu__item--hover>.menu__item-body, .menu__item--active>.menu__item-body{
+  --selected-item-text-color: #22212c;
+  color:#22212c;
+}
+
+.th-dracula .list__item-icon {
+	text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.75);
+}
+
+.th-dracula input[type='text']:active,
+.th-dracula input[type='text']:focus,
+.th-dracula input[type='password']:active,
+.th-dracula input[type='password']:focus,
+.th-dracula input:not([type]):active,
+.th-dracula input:not([type]):focus,
+.th-dracula textarea:active,
+.th-dracula textarea:focus {
+  border: 2px solid rgba(106, 209, 192, 0.8);
+  box-shadow: 0px 0px 3px #22212c;
+}
+
+.th-dracula input[type="button"],
+.th-dracula input[type="reset"],
+.th-dracula input[type="submit"],
+.th-dracula button{
+  color: #22212c;
 }
